--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "dotenv-webpack": "^7.0.2",
     "eslint": "^6.3.0",
     "eslint-loader": "^3.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "style-loader": "^1.0.0",
@@ -28,6 +30,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "client-oauth2": "^4.3.3",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "save-dev": "^0.0.1-security"
